<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/bg_activity"
    android:gravity="center_vertical"
    android:padding="@dimen/_5sdp">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivProfile"
        android:layout_width="@dimen/_50sdp"
        android:layout_height="@dimen/_50sdp"
        android:layout_margin="@dimen/_1sdp"
        android:background="@color/splashprimary"
        android:src="@drawable/ic_avatar" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/splashprimary"
        android:orientation="vertical"
        android:paddingStart="@dimen/_10sdp"
        android:paddingEnd="@dimen/_10sdp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_5sdp"
            android:background="@color/bg_activity"
            android:ellipsize="end"
            android:gravity="center"
            android:lines="1"
            android:text="@string/player_1"
            android:textSize="@dimen/_14ssp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_5sdp"
            android:background="@color/bg_activity"
            android:ellipsize="end"
            android:gravity="center"
            android:lines="1"
            android:text="@string/email"
            android:textSize="@dimen/_12ssp" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnInvite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/invite" />
</androidx.appcompat.widget.LinearLayoutCompat>