<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/splashprimary"
        android:gravity="center"
        android:orientation="vertical"
        tools:context=".HomeScreenActivity">

        <ImageView
            android:id="@+id/profile_image"
            android:layout_width="94dp"
            android:layout_height="83dp"
            android:layout_centerHorizontal="true"
            android:layout_margin="20dp"
            android:layout_marginStart="60dp"
            android:layout_marginLeft="60dp"
            android:contentDescription="TODO"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/profile_text"
            android:layout_width="153dp"
            android:layout_height="53dp"
            android:layout_below="@id/profile_image"
            android:layout_centerHorizontal="true"
            android:layout_margin="10dp"
            android:layout_marginBottom="48dp"
            android:textColor="#FEDB1C"
            android:textSize="22sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/compbtn"
            tools:ignore="MissingConstraints"
            tools:text="Pavan Patel" />

        <Button
            android:id="@+id/sign_out"
            android:layout_width="107dp"
            android:layout_height="45dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:background="#FEDB1C"
            android:text="SIGN OUT"
            android:textColor="@color/splashprimary"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.972"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/tic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="112dp"
            android:text="@string/tic"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#FEDB1C"
            android:textSize="70sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.028" />

        <TextView
            android:id="@+id/tac"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="112dp"
            android:text="@string/tac"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#FEDB1C"
            android:textSize="70sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/toe"
            app:layout_constraintHorizontal_bias="0.523"
            app:layout_constraintStart_toEndOf="@+id/tic"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.028" />

        <TextView
            android:id="@+id/toe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="112dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/toe"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#FEDB1C"
            android:textSize="70sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.028" />

        <Button
            android:id="@+id/onlinebtn"
            android:layout_width="205dp"
            android:layout_height="75dp"
            android:layout_marginTop="72dp"
            android:background="#FEDB1C"
            android:text="@string/online"
            android:textColor="@color/splashprimary"
            android:textSize="34sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tac" />

        <Button
            android:id="@+id/twoplybtn"
            android:layout_width="205dp"
            android:layout_height="75dp"
            android:layout_marginTop="36dp"
            android:background="#FEDB1C"
            android:text="@string/two_player"
            android:textColor="@color/splashprimary"
            android:textSize="34sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/onlinebtn" />

        <Button
            android:id="@+id/compbtn"
            android:layout_width="205dp"
            android:layout_height="75dp"
            android:layout_marginTop="144dp"
            android:background="#FEDB1C"
            android:text="@string/v_s_comp"
            android:textColor="@color/splashprimary"
            android:textSize="34sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/onlinebtn" />

        <TextView
            android:id="@+id/profile_email"
            android:layout_width="262dp"
            android:layout_height="36dp"
            android:layout_centerHorizontal="true"
            android:layout_margin="10dp"
            android:textColor="#FEDB1C"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/tac"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.07"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.24000001"
            tools:ignore="MissingConstraints"
            tools:text="pvnpatel72@gmail.com" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>